implementado todas as cessões da página inicial

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/index.css">
+	<link rel="icon" type="image/x-icon" href="./img/favicon.ico">
 	<title>Removip</title>
 </head>
 
@@ -86,6 +87,7 @@
 		</div>
 		<section class="cessaoSecundaria">
 			<div>
+				<img src="./img/coracao.svg" alt="Simbolo da cruz hospitalar" width="100">
 				<h4>Especialidades</h4>
 			</div>
 			<div>
@@ -103,8 +105,30 @@
 				<p>Infraestrutura sob comando de profissionais qualificados</p>
 			</div>
 		</section>
+		<section class="cessaoTerciaria">
+			<h3 id="oferecemos">Oferecemos</h3>
+			<div id="oferecemosImg" alt="Imagem de ambulância"></div>
+			<h4 id="oferecemosDesc">Remoção de Pacientes</h4>
+			<div id="oferecemosSeletores">
+
+		</section>
 	</main>
-	<div style="height: 500px; width: 100%;"></div>
+	<footer id="footer">
+		<div>
+			<img src='./img/logoComSimbolo.svg' width="250" height="auto" alt="Logo Removip" />
+			<p class="fraseDesc">A RemoVip é uma empresa especializada em locação de ambulâncias, remoção de
+				paciêntes</p>
+		</div>
+		<div></div>
+		<div>
+			<div>
+				<p>Rua João Torquato, 248<br />Bonsuceesso - Rio de Janeiro - RJ<br />CEP 21032-150</p>
+				<p>removip@removip.com.br<br />(21) 3040-2666</p>
+			</div>
+		</div>
+		<h4> Desenvolvido por a&a agência criativa para RemoVip - Rio de Janeiro ♥</h4>
+		<p style="text-align: center; grid-column:1/6; margin-top: 0;">&copy;2023</p>
+	</footer>
 </body>
 
 </html>
