Ajuste de alinhamento de estilos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 						</a>
 					</li>
 					<li>
-						<img src="./img/whatsapp.svg" alt="Link para o Whatsapp" width="32">
+						<a href="https://whatsa.me/5521970769075/?t=Ol%C3%A1" target="_blank"
+							rel="noopener noreffer">
+							<img src="./img/whatsapp.svg" alt="Link para o Whatsapp" width="32">
+						</a>
 					</li>
 				</ul>
 			</div>
@@ -68,9 +71,19 @@
 		</div>
 		<div class="containerBotoesDeChamada">
 			<div class="botoesDeChamada">
-				<button><b>Peça Agora</b> via Whatsapp</button>
+				<button>
+					<a style="text-decoration: none; color: inherit;"
+						href="https://whatsa.me/5521970769075/?t=Ol%C3%A1" target="_blank"
+						rel="noreferrer noopener">
+						<b>Peça Agora</b> via Whatsapp
+					</a>
+				</button>
 				<img src="./img/ambulancia.svg" alt="icone de ambulância" width="64">
-				<button><b>Peça Agora</b> por telefone</button>
+				<button>
+					<a href="tel:+5521970769075" style="text-decoration: none; color: inherit;">
+						<b>Peça Agora</b> por telefone
+					</a>
+				</button>
 			</div>
 		</div>
 		<div class="textureBG">
@@ -110,25 +123,31 @@
 			<div id="oferecemosImg" alt="Imagem de ambulância"></div>
 			<h4 id="oferecemosDesc">Remoção de Pacientes</h4>
 			<div id="oferecemosSeletores">
-
+				<img src="./img/arrow.svg" style="transform: rotate(180deg);" width="64px"
+					alt="Seta para a esquerda">
+				<img src="./img/arrow.svg" width="64px" alt="Seta para a direita">
+			</div>
 		</section>
 	</main>
 	<footer id="footer">
-		<div>
-			<img src='./img/logoComSimbolo.svg' width="250" height="auto" alt="Logo Removip" />
-			<p class="fraseDesc">A RemoVip é uma empresa especializada em locação de ambulâncias, remoção de
-				paciêntes</p>
-		</div>
-		<div></div>
-		<div>
+		<div class="widthLimitation footerContainer">
 			<div>
-				<p>Rua João Torquato, 248<br />Bonsuceesso - Rio de Janeiro - RJ<br />CEP 21032-150</p>
-				<p>removip@removip.com.br<br />(21) 3040-2666</p>
+				<img src='./img/logoComSimbolo.svg' width="250" height="auto" alt="Logo Removip" />
+				<p class="fraseDesc">A RemoVip é uma empresa especializada em locação de ambulâncias, remoção de
+					paciêntes</p>
 			</div>
+			<div></div>
+			<div>
+				<div>
+					<p>Rua João Torquato, 248<br />Bonsuceesso - Rio de Janeiro - RJ<br />CEP 21032-150</p>
+					<p>removip@removip.com.br<br />(21) 3040-2666</p>
+				</div>
+			</div>
+			<h4> Desenvolvido por a&a agência criativa para RemoVip - Rio de Janeiro ♥</h4>
+			<p style="text-align: center; grid-column:1/4; margin-top: 0;">&copy;2023</p>
 		</div>
-		<h4> Desenvolvido por a&a agência criativa para RemoVip - Rio de Janeiro ♥</h4>
-		<p style="text-align: center; grid-column:1/6; margin-top: 0;">&copy;2023</p>
 	</footer>
+	<script src="./js/index.js"></script>
 </body>
 
 </html>
